<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

    <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:collapsedTitleTextAppearance="@style/CollapsedAppBar"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/ivProductImage"
                android:transitionName="ivProductImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/product_image"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/svReviews"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:id="@+id/rlHeader"
            android:layout_width="match_parent"
            style="?pageBackground"
            android:layout_height="wrap_content">

            <android.support.v7.widget.CardView
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                style="?cvBackground"
                app:cardCornerRadius="4dp"
                android:id="@+id/cv1">
             <include
                 layout="@layout/content_product_header"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"/>
            </android.support.v7.widget.CardView>

            <com.codepath.project.android.views.QuestTextView
                android:id="@+id/tvVideoTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/cv1"
                android:layout_marginTop="20dp"
                android:text="@string/product_videos"
                android:layout_marginLeft="@dimen/product_margin"
                android:fontFamily="sans-serif-light"
                style="?textSubheader"
                android:textSize="20sp" />

            <LinearLayout
                android:id="@+id/lineVideo"
                android:layout_below="@id/tvVideoTitle"
                style="@style/product_detail_line_separator"
                android:layout_marginBottom="20dp"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvVideo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/lineVideo"
                />

            <com.codepath.project.android.views.QuestTextView
                android:id="@+id/tvFriendsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/rvVideo"
                android:layout_marginTop="30dp"
                android:text="@string/owned_by_your_friends"
                android:layout_marginLeft="@dimen/product_margin"
                android:fontFamily="sans-serif-light"
                style="?textSubheader"
                android:textSize="20sp"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/lineFriends"
                android:layout_below="@id/tvFriendsTitle"
                android:visibility="gone"
                android:layout_marginBottom="20dp"
                style="@style/product_detail_line_separator"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvFriends"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/lineFriends"
                 />

            <com.codepath.project.android.views.QuestTextView
                android:id="@+id/tvReviewsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/rvFriends"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="@dimen/product_margin"
                android:text="@string/reviews"
                android:fontFamily="sans-serif-light"
                style="?textSubheader"
                android:textAppearance="?android:attr/textAppearanceLarge"/>

            <ImageButton
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:scaleType="fitXY"
                android:layout_alignParentRight="true"
                android:onClick="onAddReview"
                android:layout_below="@id/rvFriends"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="30dp"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_add_black_24dp"
                android:tint="@color/colorPrimary" />


            <LinearLayout
                android:id="@+id/line6"
                android:layout_below="@id/tvReviewsTitle"
                style="@style/product_detail_line_separator"/>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rvReviews"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/line6"
                    android:paddingLeft="8dp"
                    android:layout_marginLeft="@dimen/product_margin"
                    android:layout_marginRight="@dimen/product_margin"
                    android:paddingRight="8dp" />
            <LinearLayout
                android:id="@+id/line7"
                android:layout_below="@id/rvReviews"
                style="@style/product_detail_line_separator"/>

            <com.codepath.project.android.views.QuestTextView
                android:id="@+id/showAllReview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/line7"
                android:layout_marginBottom="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="@dimen/product_margin"
                android:text="Show all reviews"
                android:fontFamily="sans-serif-light"
                android:onClick="onShowAllReviews"
                style="?textSubheader"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="18sp" />
        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>